--- a/src/app/calc-form/calc-form.page.html
+++ b/src/app/calc-form/calc-form.page.html
@@ -39,9 +39,9 @@
           <ion-button expand="block" (click)="dividir()">/</ion-button>
         </ion-col>
       </ion-row>  
-      <ion-item>
-        <ion-label></ion-label>
-      </ion-item>  
+        <ion-col>
+          <ion-button expand="block" (click)="formReset()">Limpiar formulario</ion-button>
+        </ion-col>  
     </ion-card-content>
   </ion-card>
 </ion-content>
